[gd_scene load_steps=14 format=2]

[ext_resource path="res://jenga_prototype/gameplay_elements/cups/milk_shake_cup/pngs/Canudo.png" type="Texture" id=1]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/milk_shake_cup/pngs/ShakeMask.png" type="Texture" id=2]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/milk_shake_cup/pngs/Shake.png" type="Texture" id=3]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/beer_cup/pngs/Copo-base-fundo.png" type="Texture" id=4]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/milk_shake_cup/pngs/Copo.png" type="Texture" id=5]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/milk_shake_cup/pngs/Marca.png" type="Texture" id=6]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/milk_shake_cup/pngs/Tampa.png" type="Texture" id=7]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/beer_cup/pngs/Copo-detalhes-frente.png" type="Texture" id=8]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/milk_shake_cup/pngs/Canudo dentro.png" type="Texture" id=9]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/beer_cup/pngs/Copo-cerveja-meio.png" type="Texture" id=10]
[ext_resource path="res://jenga_prototype/ui_elements/buttons/pngs/Bot√£o-copo.png" type="Texture" id=11]
[ext_resource path="res://jenga_prototype/ui_elements/buttons/SpawnCupsButton.gd" type="Script" id=12]
[ext_resource path="res://jenga_prototype/shared_variables/bool_is_milkshake.tres" type="Resource" id=13]

[node name="SpawnCups" type="TextureButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -274.0
margin_bottom = -55.0
rect_min_size = Vector2( 100, 150 )
texture_normal = ExtResource( 11 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
color_hover = Color( 0.713726, 0.721569, 1, 1 )
color_pressed = Color( 0.713726, 0.976471, 1, 1 )
is_milkshake = ExtResource( 13 )

[node name="SpawnPivot" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = -30.0
margin_bottom = -30.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CupSpawnPoint" type="Control" parent="SpawnPivot"]
margin_top = -187.0
margin_bottom = -187.0
rect_min_size = Vector2( 25, 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SpawnPivot/CupSpawnPoint"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.972549, 0.160784, 0.160784, 1 )

[node name="IconPivot" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Beer" type="Node2D" parent="IconPivot"]
scale = Vector2( 0.08, 0.08 )

[node name="CupBase" type="Sprite" parent="IconPivot/Beer"]
texture = ExtResource( 4 )

[node name="Liquid" type="Sprite" parent="IconPivot/Beer"]
light_mask = 2
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, 968, 1496 )

[node name="Light2D" type="Light2D" parent="IconPivot/Beer"]
texture = ExtResource( 2 )
mode = 3
range_item_cull_mask = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Marca" type="Sprite" parent="IconPivot/Beer"]
z_index = 1
z_as_relative = false
texture = ExtResource( 8 )

[node name="MilkShake" type="Node2D" parent="IconPivot"]
visible = false
scale = Vector2( 0.08, 0.08 )

[node name="CupBase" type="Sprite" parent="IconPivot/MilkShake"]
texture = ExtResource( 5 )

[node name="Liquid" type="Sprite" parent="IconPivot/MilkShake"]
light_mask = 2
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 968, 1496 )

[node name="Light2D" type="Light2D" parent="IconPivot/MilkShake"]
texture = ExtResource( 2 )
mode = 3
range_item_cull_mask = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Tampa" type="Sprite" parent="IconPivot/MilkShake"]
texture = ExtResource( 7 )
offset = Vector2( 0, -563 )

[node name="Canudo" type="Sprite" parent="IconPivot/MilkShake/Tampa"]
texture = ExtResource( 1 )
offset = Vector2( 0, -836 )

[node name="Canudo2" type="Sprite" parent="IconPivot/MilkShake/Tampa"]
show_behind_parent = true
texture = ExtResource( 9 )

[node name="Marca" type="Sprite" parent="IconPivot/MilkShake"]
z_index = 1
z_as_relative = false
texture = ExtResource( 6 )
[connection signal="button_down" from="." to="." method="_on_SpawnCups_button_down"]
[connection signal="button_up" from="." to="." method="_on_SpawnCups_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_SpawnCups_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SpawnCups_mouse_exited"]
